<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/invalid_input_background"
        android:padding="16dp"
        android:text="@string/enter_your_information"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/invalid_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:startIconDrawable="@drawable/invalid_background"
        app:startIconTint="@color/invalid_input_background">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:padding="12dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/name"
        android:textColor="@color/select_border"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/et_first_name"
        app:layout_constraintEnd_toEndOf="@id/et_first_name"
        app:layout_constraintTop_toTopOf="@id/et_first_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/invalid_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name"
        app:startIconDrawable="@drawable/invalid_background"
        app:startIconTint="@color/invalid_input_background">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:padding="12dp"
            android:paddingEnd="40dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lastNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/last_name"
        android:textColor="@color/select_border"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/et_last_name"
        app:layout_constraintEnd_toEndOf="@id/et_last_name"
        app:layout_constraintTop_toTopOf="@id/et_last_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/invalid_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        app:startIconDrawable="@drawable/invalid_background"
        app:startIconTint="@color/invalid_input_background">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="11"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/phone_number"
        android:textColor="@color/select_border"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/et_phone"
        app:layout_constraintEnd_toEndOf="@id/et_phone"
        app:layout_constraintTop_toTopOf="@id/et_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_landline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/invalid_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:startIconDrawable="@drawable/invalid_background"
        app:startIconTint="@color/invalid_input_background">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/landLineEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="11"
            android:padding="12dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/landLineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/land_line"
        android:textColor="@color/select_border"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/et_landline"
        app:layout_constraintEnd_toEndOf="@id/et_landline"
        app:layout_constraintTop_toTopOf="@id/et_landline" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="16dp"
        android:background="@color/invalid_input_background"
        app:layout_constraintTop_toBottomOf="@id/et_landline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        android:textColor="@color/select_border"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@id/et_landline"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/invalid_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTitle"
        app:startIconDrawable="@drawable/invalid_background"
        app:startIconTint="@color/invalid_input_background">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/gender"
        android:textColor="@color/select_border"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gender">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unselect_female_gender_switch_bg"
            android:paddingHorizontal="20dp"
            android:paddingVertical="6dp"
            android:text="@string/female"
            android:textColor="@color/select_border"
            app:layout_constraintEnd_toStartOf="@id/male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_male_gender_switch_bg"
            android:paddingHorizontal="20dp"
            android:paddingVertical="6dp"
            android:text="@string/male"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/female"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Submit Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/invalid_input_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:backgroundTint="#5FE0A4"
            android:padding="12dp"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
